[metadata]
name = cassandramock
version = 0.1
summary = summary
description-file =
    README.md
author =  Sriram Madapusi Vasudevan
home-page = https://github.com/TheSriram/cassandramock
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
[files]
packages =
    cassandramock